Fixed issue(?) with options being too big for their buttons

--- a/src/Server/static/stylesheets/game.scss
+++ b/src/Server/static/stylesheets/game.scss
@@ -27,12 +27,12 @@
     margin-bottom: 0px;
 }
 .option-button {
-    width: 50%;
+    min-width: 50%;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 .options {
-    width: 50%;
+    width: 100%;
 }
 .vcenter {
     vertical-align: middle;
